prometheus/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: fluentum
spec:
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    prometheus: prometheus
  type: ClusterIP
